# framework_multi_api

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DIAGRAMS.md  ExampleUsage.cpp  Material.cpp  Material.h  MaterialUsageExample.cpp  Material_Architecture.txt  Material_DesignAlternatives.md  Material_INDEX.md  Material_IntegrationGuide.cpp  Material_QuickReference.md  Material_README.md  Material_Summary.md  Material_Tests.cpp  Mesh.cpp  Mesh.h  OpenGLProject.sln  OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters  PLUGIN_ARCHITECTURE.md  QUICK_REFERENCE.md  README_GRAPHICS_CLASSES.md  RenderMeshExample.cpp  RenderMesh_Design.md  RenderMesh_Integration_Guide.md  Renderable.h  VULKAN_SHADERS.md  compile_vulkan_shaders.bat  vcpkg.json
plugins/OGLRenderer/: CMakeLists.txt  OGLPlugin.cpp  OGLRenderer.vcxproj  OGLRenderer.vcxproj.filters
plugins/VKRenderer/: CMakeLists.txt  VKPlugin.cpp  VKRenderer.vcxproj  VKRenderer.vcxproj.filters
shaders/: README.md  basic.frag  basic.frag.spv  basic.vert.spv  compile_shaders.bat  triangle.vert.spv
shaders/opengl/: basic.frag  basic.vert
shaders/vulkan/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  triangle.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Logger.cpp  Logger.h  MyApp.cpp  MyApp.h  RenderMesh.cpp  RenderMesh.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  TextureUtils.cpp  TextureUtils.h  WindowManager.cpp  WindowManager.h  main.cpp
src/OGL/: GLResource.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/RenderAPI/: IIndexBuffer.h  IPrimitiveType.h  IRenderPlugin.h  IRenderer.h  IShaderManager.h  IShaderProgram.h  ITexture.h  IVertexArray.h  IVertexBuffer.h  PluginLoader.cpp  PluginLoader.h
src/VK/: IndexBuffer.cpp  IndexBuffer.h  MemoryAllocator.cpp  MemoryAllocator.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  ValidationLayers.cpp  ValidationLayers.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
